# hprof-analyzer

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  why-rust.md
docs/samples/: scala-doku-full.graphs.md  scala-doku-full.html  scala-doku-full.md  scala-doku.graphs.md  scala-doku.html  scala-doku.md
schema/: report.schema.json
scripts/: gen-samples.sh  mat_diff_sweep.sh  measure-bigdump-rss.sh  sync-to-thinkstation.sh
src/: bitset.rs  chunkvec.rs  collection_config.rs  cvec.rs  diff.rs  diff_reports.rs  dominator.rs  html.rs  id_map.rs  main.rs  md.rs  md_test.rs  pass1.rs  pass2.rs  progress.rs  reader.rs  report.rs  retained.rs  rpo_dfs.rs  sweep.rs  trace.rs  types.rs  unreachable_retained.rs  vbyte.rs
src/diff/: compare.rs  mod.rs  model.rs  parse.rs
src/pass2/: boxed.rs  dup_prim_arrays.rs  fielddecode.rs  meta.rs  mod.rs  model.rs  scan.rs  sizing.rs  strings.rs
src/report/: build.rs  format.rs  mod.rs  model.rs  render_graphs.rs  render_md.rs  triage.rs
tests/: browser_smoke.sh  cli_unified.rs  html_selfcontained.rs  integration.rs  json_size_budget.rs  parity.rs
tests/fixtures/: dump_0_fj-kmeans_mdgraphs.md  dump_0_fj-kmeans_ours.md  dump_1_mnemonics_mdgraphs.md  dump_1_mnemonics_ours.md  dump_2_scala-doku_mdgraphs.md  dump_2_scala-doku_ours.md  dump_3_par-mnemonics_mdgraphs.md  dump_3_par-mnemonics_ours.md  dump_4_philosophers_mdgraphs.md  dump_4_philosophers_ours.md  dump_4_philosophers_report.json  dump_4_philosophers_report_flags.json  dump_6_dec-tree_mdgraphs.md  dump_6_dec-tree_ours.md  dump_7_gauss-mix_mdgraphs.md  dump_7_gauss-mix_ours.md  dump_8_log-regression_mdgraphs.md  dump_8_log-regression_ours.md
tools/: compare_parity.py  compare_parse.py
web/: esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  chartSetup.ts  charts.tsx  domTree.tsx  format.ts  index.tsx  styles.css  types.ts
