[package]
name = "hprof-analyzer"
version = "0.1.0"
edition = "2024"
description = "Fast, low-memory Java HPROF heap-dump analyzer with Eclipse MAT-parity reports (System Overview, Leak Suspects, Top Consumers)."
license = "MIT"
repository = "https://github.com/parttimenerd/hprof-analyzer"
readme = "README.md"
authors = ["Johannes Bechberger"]
keywords = ["hprof", "heap-dump", "java", "memory", "oom"]
categories = ["command-line-utilities", "development-tools::profiling"]
exclude = ["tests/fixtures/*.hprof", ".git-worktrees/*", "docs/*"]

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
flate2 = "1.1.9"
libc = "0.2"
scraper = "0.27.0"
schemars = "=1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
jsonschema = "0.47.0"
proptest = "1"

# Clippy is run in CI (see .github/workflows/ci.yml). Most lints are enforced;
# the allows below are deliberate patterns in the memory-critical hot paths,
# not tech debt:
#   needless_range_loop  - index drives several parallel per-object arrays at
#                          once (semi/ancestor/label, class_idx, ...); the
#                          iterator rewrite obscures the shared index and can
#                          perturb the bit-exact dominator/pass2 hot loops.
#   ptr_arg              - &mut Vec params are grown via push()/clear() inside
#                          the fill routines; a slice cannot resize.
#   collapsible_if       - nested `if let` guards read more clearly unmerged.
#   too_many_arguments   - the retained-set builder threads many CSR arrays by
#                          reference to avoid extra allocations.
[lints.clippy]
needless_range_loop = "allow"
ptr_arg = "allow"
collapsible_if = "allow"
too_many_arguments = "allow"
